--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,1 +1,27 @@
-.ng-invalid.ng-touched:not(form){border:1px solid red}
+/* Imports */
+.ng-invalid.ng-touched:not(form) {
+  color: red;
+}
+
+button:focus {
+  -webkit-appearance: initial;
+}
+
+.full-width {
+  width: 100%;
+}
+
+.mat-button {
+  background: #2A9FD8;
+  color: #fff;
+}
+
+.mat-button:disabled {
+  background: #C2C2C2;
+}
+
+.cdk-focused {
+  background: #fff;
+  color: #2A9FD8;
+  border: 1px solid #2A9FD8;
+}
