--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,10 @@
-/* Imports */
-.ng-invalid.ng-touched:not(form) {
-  color: red;
+/* Imports mixins */
+.ng-invalid.ng-touched:not(form), .ng-invalid.ng-valid:not(form) {
+  color: #fd0019;
+}
+
+.error {
+  color: #fd0019;
 }
 
 button:focus {
@@ -24,4 +28,68 @@ button:focus {
   background: #fff;
   color: #2A9FD8;
   border: 1px solid #2A9FD8;
+}
+
+/* Modal */
+.absolute {
+  z-index: 0;
+  position: absolute;
+  padding: 0px 30px 0px 0px;
+}
+
+.containerModal {
+  z-index: 1;
+  position: absolute;
+  background-color: #fff;
+  padding: 0px 30px 0px 0px;
+}
+
+.squareModal {
+  z-index: 1;
+  background-color: #fff;
+  overflow: auto;
+  height: 30rem;
+  font-size: 12px;
+}
+
+.cnt-button {
+  padding: 10px;
+}
+
+/* Animaciones */
+.animated {
+  -webkit-animation-duration: 500mss;
+  animation-duration: 500ms;
+  -webkit-animation-fill-mode: backwards;
+  animation-fill-mode: backwards;
+}
+
+.fast {
+  -webkit-animation-duration: 0.4s;
+  animation-duration: 0.4s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.fadeIn {
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
 }
