--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,6 +1,12 @@
-/* Imports */
-.ng-invalid.ng-touched:not(form){
-    color: red;
+/* Imports mixins */
+@import 'variables';
+
+.ng-invalid.ng-touched:not(form), .ng-invalid.ng-valid:not(form){
+    color: $color-error;
+}
+
+.error{
+    color: $color-error; 
 }
 
 button:focus {
@@ -12,15 +18,71 @@ button:focus {
 }
 
 .mat-button{
-    background: #2A9FD8;
-    color: #fff;
+    background: $color-btn-activo;
+    color: $color-white;
     &:disabled{
-        background: #C2C2C2;
+        background: $color-btn-disabled;
     }
 }
 
 .cdk-focused{
-    background: #fff;
-    color: #2A9FD8;
-    border: 1px solid #2A9FD8;    
+    background: $color-white;
+    color: $color-btn-activo;
+    border: 1px solid $color-btn-activo;    
+}
+
+/* Modal */
+
+.absolute {
+    z-index: 0;
+    position: absolute;
+    padding: 0px 30px 0px 0px;
+}
+
+.containerModal{
+    z-index: 1;
+    position: absolute;
+    background-color: $color-white;
+    padding: 0px 30px 0px 0px;
+}
+
+.squareModal{
+    z-index: 1;
+    background-color: $color-white;
+    overflow: auto;
+    height: 30rem;
+    font-size: 12px;
+}
+
+.cnt-button {
+    padding: 10px;
+}
+
+/* Animaciones */
+
+.animated {
+    -webkit-animation-duration: 500mss;
+    animation-duration: 500ms;
+    -webkit-animation-fill-mode: backwards;
+    animation-fill-mode: backwards;
+}
+
+.fast {
+    -webkit-animation-duration: 0.4s;
+    animation-duration: 0.4s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.fadeIn {
+    animation-name: fadeIn;
 }
