Pantalla Responsive 1 step

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-form-step></app-form-step>
+<!-- <div class="principal row grid">
+    <div class="encMercadolibre col-12">
+        <img src="../assets/mercadolibre.png" alt="">
+    </div>  -->   
+    <app-form-step></app-form-step>
+    <app-footer></app-footer>
+<!-- </div> -->
