--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,6 +1,35 @@
 /* Imports mixins */
 @import 'variables';
 
+html{
+    overflow-x: hidden;
+}
+
+body{
+    background-color: $color-fondo !important;
+}
+
+.titlesPpal{
+    .titleOne{
+        color: #808080;
+        margin: 10px 0px;
+        font-size: 14px;
+        margin: 10px 0px 0px 0px;
+    }
+    .titleTwo{
+        color: #DBDBDB;
+        text-align: center;
+        font-size: 14px;
+        margin: 0px 0px 5px 0px;
+    }
+}
+
+/* Principal Step */
+
+app-form-step{
+    margin-top:50px;
+}
+
 .ng-invalid.ng-touched:not(form), .ng-invalid.ng-valid:not(form){
     color: $color-error;
 }
@@ -36,26 +65,128 @@ button:focus {
 .absolute {
     z-index: 0;
     position: absolute;
-    padding: 0px 30px 0px 0px;
+    padding: 8px;
 }
 
-.containerModal{
+.containerModal {
     z-index: 1;
     position: absolute;
     background-color: $color-white;
-    padding: 0px 30px 0px 0px;
+    margin: 2px 21px 0px 22px;
+    .squareModal{
+        z-index: 1;
+        background-color: $color-white;
+        overflow: auto;
+        height: 31rem;
+        font-size: 12px;
+        padding: 0px 18px 0px 18px;
+        text-align: justify;
+    }
 }
 
-.squareModal{
-    z-index: 1;
-    background-color: $color-white;
-    overflow: auto;
-    height: 30rem;
-    font-size: 12px;
-}
 
 .cnt-button {
     padding: 10px;
+}
+
+.row.absolute {
+    box-shadow: 0 0 6px 0px rgba(0, 0, 0, 0.4);
+    border-radius: 10px;
+    background-color: $color-white;
+    margin: 0px 15px 0px 15px !important;
+}
+
+.mat-horizontal-content-container{
+    padding: 0px !important;
+    display: block;
+    /* height: 42rem; */
+}
+
+.mat-step-header{
+    margin-left: 20px;
+}
+
+.title {
+    text-align: center;
+    padding: 20px 0px 0px 0px;
+    font-weight: 500;
+}
+
+.tycSmall{
+    font-size: 11px;
+    color: $color-btn-disabled;
+    padding-top: 15px;
+}
+
+hr{
+    border: 1px solid $color-btn-disabled !important;
+}
+
+.checkTycOk{
+    margin: 20px 0px 20px 0px;
+}
+
+button{
+    margin: 0px 0px 10px 0px !important;
+}
+
+.titleModal{
+    text-align: center;
+    padding: 20px 0px 0px 0px;
+    font-weight: 500;
+    font-size: 17px;
+}
+
+.hrModal{
+    border: 0.5px solid $color-btn-disabled !important;
+}
+
+.cntTitlem{
+    display: grid;
+    grid-template-columns: 10px 1fr;
+    .arrowLeft{
+        grid-column: 1;
+        font-size: 32px;
+        padding: 20px 10px 0px 10px;
+    }
+    .titleModal{
+        grid-column: 2;
+    }
+}
+
+.encMercadolibre{
+    background-color: $color-mercadolibre;
+    display: grid;
+    grid-template-columns: 0.3fr 1fr 0.3fr;
+    position: fixed !important;
+    width: 100%;
+    z-index: 9999;
+    top: 0;
+    height: 50px;
+    img{
+        width: 60%;
+        align-self: center;
+        justify-self: right;
+    }
+}
+
+.row.principal{
+    background-color: $color-transparent;
+    margin: 0px !important;
+}
+
+.mat-stepper-horizontal, .mat-stepper-vertical {
+    background-color: transparent;
+}
+
+.pie{
+    img{
+        width: 60% !important;
+    }
+    p.small{
+        font-size: 10px;
+        line-height: 1.6;
+    }
 }
 
 /* Animaciones */
@@ -82,6 +213,8 @@ button:focus {
         opacity: 1;
     }
 }
+
+
 
 .fadeIn {
     animation-name: fadeIn;
